--- a/MtdrSpring/backend/src/main/frontend/index.html
+++ b/MtdrSpring/backend/src/main/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="MtdrSpring/backend/src/main/frontend/src/icons/webhook.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Collabora</title>
   </head>
   <body style=" background-color: #F9F8F8;">
     <div id="root"></div>
